--- a/ExperimentTracker/ExperimentTracker.csproj
+++ b/ExperimentTracker/ExperimentTracker.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="ExperimentTracker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Text.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
